--- a/estilo/style.css
+++ b/estilo/style.css
@@ -26,19 +26,30 @@ body{
     background-color: var(--cor0);
     font-family: var(--fonte-padrão);
 }
+
+a.externo::after{
+    content:'\00a0\🔗';
+}
+
 header{
-    background-color: var(--cor04);
+    background-image: linear-gradient(to bottom, var(--cor03), var(--cor05));
+    min-height: 150px;
+    text-align: center;
+    padding:40px;
 }
 header > h1{
     color:white;
     font-family: var(--fonte-destaque);
+    font-weight: normal;
 }
 header > p{
     color:white;
+    margin-bottom: 20px;
 }
 
 nav{
     background-color: var(--cor05);
+    color: var(--cor01);
 }
 
 main{
@@ -56,9 +67,42 @@ main{
 main h1{
     color:var(--cor05);
     font-family: var(--fonte-android);
+    font-weight: normal;
+    font-size: 1.8em;
 }
 main h2{
     font-family: var(--fonte-android);
+    color: var(--cor04);
+    font-size: 1.3em;
+    font-weight: normal;
+}
+
+main p{
+    margin:150x 0px;
+    text-align: justify;
+    text-indent: 30px;
+    font-size: 1em;
+    line-height:2em;
+    background-image: linear-gradient(to right, var(--cor01), transparent);
+    text-indent: 8px;
+}
+
+main strong{
+    color: var(--cor04);
+    font-weight: bold;
+}
+
+main a{
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor05);
+    background-color: var(--cor01);
+    padding: 2px 6px;
+}
+
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor04)
 }
 
 main img{
@@ -66,12 +110,63 @@ main img{
 }
 
 main img.pequena{
-    width:50;
+    max-width:350px;
     display: block;
     margin: auto;
+}
+
+div.video{
+    background-color: var(--cor05);
+    margin:0px -20px 30px;
+    margin:0px -20px;
+    padding-bottom: 59%;
+    position: relative;
+}
+
+div.video > iframe{
+    position: absolute;
+    top:5%;
+    left: 5%;
+    width: 90%;
+    height:90%;
+}
+
+aside{
+    background-color: var(--cor01);
+    padding:10px;
+    border-radius: 10px;
+    box-shadow:3px 3px 0px rgba(0, 0, 0, 0.514) ;
+}
+
+aside > ul{
+    list-style-type: '\🗸\00a0\00a0';
+    list-style-position: inside;
+    columns: 2;
+}
+
+aside > h3{
+    background-color: var(--cor04);
+    color: white;
+    padding:10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 footer{
     background-color: #01140a;
     color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding:5px;
+}
+
+footer a{
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover{
+    text-decoration: underline;
+    color: --var(--cor01)
 }
