--- a/estilo/style.css
+++ b/estilo/style.css
@@ -41,6 +41,7 @@ header > h1{
     color:white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
+    font-weight: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.445);
 }
@@ -52,6 +53,7 @@ header > p{
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.445);
 }
 
